# countdown

./: .gitignore  build.py  config.py  countdown.ai  countdown.py  countdown.spec  cutdown.py  event.py  pyproject.toml  readme.md  requirements.txt  temp.py
config/: config.json
docs/: instruction_for_developer.md  instructions_for_user.md  readme.md
event/: event.pkl
file/: bad_info.txt
font/: Keycaps.ttc
internal/: __init__.py  config.py  generator.py  logger.py  utils.py
internal/adapter/: __init__.py  adapter.py  manager.py
internal/adapters/win_wallpaper/: adapter.py
internal/plugin/: manager.py  model.py
internal/plugins/: readme.md
ui/: mainwindow.ui
