[tool.poetry]
name = "countdown"
version = "1.6.1"
description = ""
authors = ["Woyerpa@outlook.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
pillow = "^10.1.0"
cn2an = "^0.5.22"
requests = "^2.31.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
