[tool.poetry]
name = "countdown"
version = "1.6.1"
description = ""
authors = ["ChenXu <Woyerpa@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.5.2"
pillow = "^10.1.0"
cn2an = "^0.5.22"
requests = "^2.31.0"
loguru = "^0.7.2"
pyinstaller = "^6.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel<7.0.0,>=6.29.4",
    "pyinstaller>=6.8.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "ChenXu", email = "Woyerpa@outlook.com"},
]
license = {text = "MIT"}
requires-python = "<3.13,>=3.12"
dependencies = [
    "pydantic<3.0.0,>=2.5.2",
    "pillow<11.0.0,>=10.1.0",
    "cn2an<1.0.0,>=0.5.22",
    "requests<3.0.0,>=2.31.0",
    "loguru<1.0.0,>=0.7.2",
]
name = "countdown"
version = "1.6.1"
description = ""
readme = "README.md"

[tool.pdm.scripts]
start = "pdm run countdown.py"